force-app/main/default/objects/blng__Refund__c/fields/blng__Amount__c.field-meta.xml
<CustomField>
    <fullName>blng__Amount__c</fullName>
    <formula>blng__RefundedfromPayments__c + blng__RefundedfromCreditNoteLines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>