force-app/main/default/objects/blng__Refund__c/fields/blng__BillingFinanceBook__c.field-meta.xml
<CustomField>
    <fullName>blng__BillingFinanceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Finance Book</label>
    <referenceTo>blng__FinanceBook__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>