force-app/main/default/objects/blng__Refund__c/fields/blng__GLTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__GLTreatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Treatment</label>
    <referenceTo>blng__GLTreatment__c</referenceTo>
    <relationshipLabel>Refunds</relationshipLabel>
    <relationshipName>RefundsGLTreatment</relationshipName>
    <type>Lookup</type>
</CustomField>