force-app/main/default/objects/blng__Refund__c/fields/blng__RefundDate__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundDate__c</fullName>
    <label>Refund Date</label>
    <type>Date</type>
</CustomField>