force-app/main/default/objects/blng__Refund__c/fields/blng__RefundDescription__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundDescription__c</fullName>
    <label>Refund Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>