force-app/main/default/objects/blng__Refund__c/fields/blng__RefundedfromPayments__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundedfromPayments__c</fullName>
    <label>Refunded from Payments</label>
    <summarizedField>blng__RefundLinePayment__c.blng__Amount__c</summarizedField>
    <summaryFilterItems>
        <field>blng__RefundLinePayment__c.blng__Type__c</field>
        <operation>equals</operation>
        <value>Allocation</value>
    </summaryFilterItems>
    <summaryForeignKey>blng__RefundLinePayment__c.blng__Refund__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>