force-app/main/default/objects/blng__Refund__c/fields/blng__RefundLineCreationStatus__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundLineCreationStatus__c</fullName>
    <description>A Fail status means that the refund line could not be created.  Please verify system configuration.</description>
    <inlineHelpText>A Fail status means that the refund line could not be created.  Please verify system configuration.</inlineHelpText>
    <label>Refund Line Creation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RefundLineCreationStatus</valueSetName>
    </valueSet>
</CustomField>