force-app/main/default/objects/blng__Refund__c/fields/blng__RefundMode__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundMode__c</fullName>
    <description>External mode represents a refund that has been made in an external system and electronic represents a refund that is processed by Salesforce</description>
    <inlineHelpText>External mode represents a refund that has been made in an external system and electronic represents a refund that is processed by Salesforce</inlineHelpText>
    <label>Refund Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__RefundMode</valueSetName>
    </valueSet>
</CustomField>