force-app/main/default/objects/blng__Refund__c/fields/blng__RefundType__c.field-meta.xml
<CustomField>
    <fullName>blng__RefundType__c</fullName>
    <label>Refund Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PaymentType</valueSetName>
    </valueSet>
</CustomField>